--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -36,10 +36,31 @@ body {
   margin-bottom: 10px;
 }
 
+.upper-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 450px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.lower-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 450px;
+  border-bottom-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
 .profile-picture {
   vertical-align: middle;
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   border-radius: 50%;
   object-fit: cover;
+  margin: 20px;
 }
