--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -53,7 +53,7 @@ body {
   align-items: center;
   width: 450px;
   border-bottom-left-radius: 10px;
-  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .profile-picture {
