--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -1,6 +1,8 @@
 body {
   display: flex;
   flex-direction: column;
+  background-image: url('./bg4.jpeg');
+  background-size: cover;
 }
 
 .wrapper {
@@ -8,58 +10,4 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.nav-bar {
-  display: flex;
-  width: 500px;
-  flex-direction: row;
-  justify-content: space-between;
-  background-color: transparent;
-  transition: hover, 0.15s;
-}
-
-.nav-button {
-  cursor: pointer;
-}
-.nav-button:hover {
-  background-color: gray;
-}
-
-.blog-container {
-  background-color: rgba(0,0,0,0.25);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-.upper-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 450px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-}
-
-.lower-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 450px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-
-.profile-picture {
-  vertical-align: middle;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin: 20px;
 }
