--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -3,6 +3,14 @@
   --title-color: rgba(255, 255, 255, 1);
   --text-color: rgba(255, 255, 255, 1);
   --link-color: rgb(255, 255, 255);
+  --btn-hover-color: rgba(228, 228, 228, 0.59);
+}
+
+.login-container-wrapper {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -60%);
 }
 
 .login-container {
@@ -51,6 +59,11 @@
   border-radius: 40px;
   box-shadow: 0 0 10px rgba(0 0 0 .1);
   cursor: pointer;
+  transition: hover, 0.2s;
+}
+
+.login-btn:hover {
+  background: var(--btn-hover-color);
 }
 
 .input-box{
@@ -108,6 +121,14 @@
   font-size: 15px;
   font-weight: 600;
   font-stretch: condensed;
+  text-decoration: underline;
+  cursor: pointer;
+  color: var(--text-color);
+  transition: hover, 0.2s;
+}
+
+.register-link:hover {
+  color: var(--btn-hover-color)
 }
 
 .register-info {
@@ -119,4 +140,12 @@
   font-size: 14.5px;
   font-family: Work Sans;
   color: white;
+}
+
+.error-container {
+  width: 328px;
+  font-family: 'Open Sans';
+  color: var(--text-color);
+  text-align: center;
+  padding-bottom: 15px;
 }
