--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -1,11 +1,3 @@
-:root{
-  --wrapper-color: rgba(255, 255, 255, 0.25);
-  --title-color: rgba(255, 255, 255, 1);
-  --text-color: rgba(255, 255, 255, 1);
-  --link-color: rgb(255, 255, 255);
-  --btn-hover-color: rgba(228, 228, 228, 0.59);
-}
-
 .blog-page-title {
   font-family: 'Poiret One';
   font-size: 35px;
@@ -16,35 +8,109 @@
   color: white;
 }
 
+.blog-login-container {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+  border-radius: 15px;
+  margin-top: 50px;
+}
+
+.blog-login-title {
+  font-family: 'Open Sans';
+  font-size: 25px;
+  font-weight: 600;
+  color: black;
+  margin-bottom: 1px;
+}
+
+.blog-login-text {
+  font-family: 'Open Sans';
+  font-size: 15px;
+  color: gray;
+}
+
+.blog-login-btn {
+  margin-top: 15px;
+  font-family: 'Open Sans';
+  font-size: 15px;
+  font-weight: 600;
+  color: black;
+  text-decoration: none;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  background-color: #f2f3f5;
+  border-radius: 100px;
+  border: none;
+  cursor: pointer;
+  transition: hover, 0.2s;
+}
+
+.blog-login-btn:hover {
+  background-color: #ccd1db;
+}
+
 .blog-container {
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-bottom: 10px;
   display: flex;
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   padding-left: 30px;
   padding-right: 30px;
-  border-radius: 5px;
-  background-color: var(--wrapper-color);
+  border-radius: 15px;
+  background-color: #ffffff;
+  width: 600px;
 }
 
 .blog-header {
-  display: flex;
-  justify-content: center;
   width: 100%;
 }
 
 .blog-title {
   font-family: 'Open Sans';
-  font-size: 20px;
-  color: white;
-  text-align: center;
+  font-size: 25px;
+  color: black;
+}
+
+.blog-info {
+  width: 100%;
+  font-family: 'Open Sans';
+  font-size: 15px;
+  color: gray;
+  margin-bottom: 15px;
 }
 
 .blog-body {
+  width: 100%;
   font-family: 'Open Sans';
-  color: white;
-  text-align: center;
+  color: black;
+  margin-bottom: 30px;
+}
+
+.delete-blog-btn {
+  font-family: 'Open Sans';
+  font-size: 15px;
+  font-weight: 600;
+  color: black;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  background-color: #f2f3f5;
+  border-radius: 100px;
+  border: none;
+  cursor: pointer;
+  transition: hover, 0.2s;
+}
+
+.delete-blog-btn:hover {
+  background-color: #ccd1db;
 }
