--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,11 +1,3 @@
-:root{
-  --wrapper-color: rgba(73, 157, 232, 0.25);
-  --title-color: rgba(255, 255, 255, 1);
-  --text-color: rgba(255, 255, 255, 1);
-  --link-color: rgb(255, 255, 255);
-  --btn-hover-color: rgba(228, 228, 228, 0.59);
-}
-
 .login-container-wrapper {
   position: absolute;
   left: 50%;
@@ -20,7 +12,7 @@
   align-items: center;
   margin: 40px;
   width: max-content;
-  background-color: var(--wrapper-color);
+  background-color: var(--login-wrapper-color);
   padding-top: 15px;
   padding-bottom: 15px;
   padding-left: 30px;
@@ -52,7 +44,6 @@
   font-size: 14.5px;
   width: 100%;
   height: 45px;
-  background:white;
   border: none;
   outline: none;
   margin-bottom: 20px;
@@ -63,7 +54,7 @@
 }
 
 .login-btn:hover {
-  background: var(--btn-hover-color);
+  background: var(--login-btn-hover-color);
 }
 
 .input-box{
@@ -90,7 +81,7 @@
   border: none;
   outline: none;
   font-family: 'Open Sans';
-  color: white;
+  color: black;
   margin: none;
 }
 
@@ -114,6 +105,7 @@
 .register-label {
   font-family: 'Open Sans';
   font-size: 15px;
+  color: var(--text-color);
 }
 
 .register-link {
@@ -128,7 +120,7 @@
 }
 
 .register-link:hover {
-  color: var(--btn-hover-color)
+  color: #ccd1db;
 }
 
 .register-info {
