--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,9 +1,3 @@
-:root{
-  --nav-bar-color: rgba(73, 157, 232, 0.25);
-  --wrapper-color: rgba(73, 157, 232, 0.25);
-  --btn-hover-color: rgba(114, 142, 221, 0.59);
-}
-
 .nav-bar {
   display: flex;
   width: 100%;
@@ -34,7 +28,7 @@
 }
 
 .nav-button-wrapper:hover {
-  background-color: var(--btn-hover-color)
+  background-color: var(--nav-btn-hover-color)
 }
 
 .nav-button-label {
