Added post information to all posts; User can click a button to show and hide the container to post a blog.

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -20,8 +20,9 @@
 body {
   display: flex;
   flex-direction: column;
-  background-image: url('./bg1.jpeg');
   background-size: cover;
+  background-image: url('./bg1.jpeg');
+  background-attachment: fixed;
 }
 
 .wrapper {
