--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -55,11 +55,22 @@
   background-color: #ccd1db;
 }
 
+.blog-title-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: white;
+  border-radius: 15px;
+  padding: 5px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
 .blog-container {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   display: flex;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -123,6 +134,7 @@
   background-color: white;
   padding: 20px;
   border-radius: 15px;
+  margin-bottom: 20px;
 }
 
 .blog-title-input-box {
