--- a/src/components/CharacterGallery.css
+++ b/src/components/CharacterGallery.css
@@ -1,3 +1,50 @@
+.gallery-login-container {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+  border-radius: 15px;
+  margin-top: 50px;
+}
+
+.gallery-login-title {
+  font-family: 'Open Sans';
+  font-size: 25px;
+  font-weight: 600;
+  color: black;
+  margin-bottom: 1px;
+}
+
+.gallery-login-text {
+  font-family: 'Open Sans';
+  font-size: 15px;
+  color: gray;
+}
+
+.gallery-login-btn {
+  margin-top: 15px;
+  font-family: 'Open Sans';
+  font-size: 15px;
+  font-weight: 600;
+  color: black;
+  text-decoration: none;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  background-color: #f2f3f5;
+  border-radius: 100px;
+  border: none;
+  cursor: pointer;
+  transition: hover, 0.2s;
+}
+
+.gallery-login-btn:hover {
+  background-color: #ccd1db;
+}
+
 .gallery-title-container {
   display: flex;
   flex-direction: column;
@@ -141,4 +188,21 @@ input[type="file"]::file-selector-button:hover {
   font-size: 15px;
   color: gray;
   margin-bottom: 15px;
+}
+
+.delete-post-btn {
+  font-family: 'Open Sans';
+  font-size: 15px;
+  font-weight: 600;
+  color: black;
+  margin-top: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 15px;
+  padding-right: 15px;
+  background-color: #f2f3f5;
+  border-radius: 100px;
+  border: none;
+  cursor: pointer;
+  transition: hover, 0.2s;
 }
