--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,28 +1,53 @@
-.upper-container {
+.home-container {
+  background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 450px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  padding: 15px;
+  border-radius: 15px;
+  margin-top: 20px;
+  width: 392.54px;
 }
 
-.lower-container {
+.home-upload-container {
+  padding-top: 0px;
+  padding-bottom: 25px;
+  padding-left: 15px;
+  padding-right: 15px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 450px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
+  background-color: white;
+  border-radius: 15px;
 }
 
-.profile-picture {
-  vertical-align: middle;
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  object-fit: cover;
-  margin: 20px;
+.pencil-icon {
+  background-color: #f2f3f5;
+  padding: 15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 15px;
+  transition: hover, 0.3s;
+}
+
+.pencil-icon:hover {
+  cursor: pointer;
+  background-color: #ccd1db;
+}
+
+.fa-icon {
+  color: black;
+}
+
+.home-username {
+  font-family: 'Open Sans';
+  font-size: 30px;
+  color: black;
+}
+
+.home-name {
+  font-family: 'Open Sans';
+  font-size: 18px;
+  color: gray;
+  margin-bottom: 15px;
 }
