--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -84,12 +84,14 @@
 .media-link-wrapper {
   display: flex;
   flex-direction: row;
+  width: max-content;
   column-gap: 10px;
 }
 
 .media-link-btn {
   font-family: 'Open Sans';
   text-decoration: none;
+  text-align: center;
   background-color: #f2f3f5;
   color: black;
   padding-top: 10px;
@@ -100,6 +102,7 @@
   margin-bottom: 10px;
   border-radius: 50px;
   transition: hover, 0.3s;
+  width: 275px;
 }
 
 .media-link-btn:hover {
@@ -129,4 +132,30 @@
   width: 100%;
   margin-top: 15px;
   margin-bottom: 15px;
+}
+
+.link-input-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.link-input-box {
+  font-family: 'Open Sans';
+  font-size: 15px;
+  text-align: center;
+  width: 390px;
+  border: none;
+  outline: none;
+  margin-bottom: 25px;
+}
+
+.links-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
