--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -46,12 +46,18 @@
 }
 
 .pencil-icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-color: #f2f3f5;
   padding: 15px;
   margin-top: 10px;
   margin-bottom: 10px;
   border-radius: 15px;
   transition: hover, 0.3s;
+  width: 20px;
+  height: 20px;
 }
 
 .pencil-icon:hover {
@@ -158,4 +164,16 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.background-upload-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #ffffff;
+  border-radius: 15px;
+  width: 100%;
+  margin-top: 15px;
+  margin-bottom: -5px;
 }
