Restructured application so that all content is wrapped in the Dashboard

--- a/src/components/Navigation/NavBar.css
+++ b/src/components/Navigation/NavBar.css
@@ -6,6 +6,7 @@
   background-color: transparent;
   transition: hover, 0.15s;
   background-color: var(--nav-bar-color);
+  position: static;
 }
 
 .nav-button-wrapper {
