--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -6,7 +6,6 @@
   justify-content: center;
   align-items: center;
   border-radius: 15px;
-  margin-top: 20px;
   width: 392.54px;
 }
 
@@ -174,6 +173,7 @@
   background-color: #ffffff;
   border-radius: 15px;
   width: 100%;
-  margin-top: 15px;
-  margin-bottom: -5px;
+  margin-bottom: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
