--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -205,3 +205,10 @@ input[type="file"]::file-selector-button:hover {
   cursor: pointer;
   transition: hover, 0.2s;
 }
+
+.gallery-image {
+  width: 500px;
+  height: auto;
+  object-fit: cover;
+  border-radius: 20px;
+}
