--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -81,6 +81,13 @@
   margin-bottom: 15px;
 }
 
+.avatar {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
 .links-title-display {
   font-family: 'Open Sans';
   font-size: 25px;
