Finalized wallpaper uploading

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -192,3 +192,10 @@ body {
   object-fit: cover;
   border-radius: 20px;
 }
+
+.avatar-preview {
+  width: 200px;
+  height: 200px;
+  border-radius: 20px;
+  object-fit: cover;
+}
