--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -49,7 +49,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: white;
+  background-color: var(--container-color);
   border-radius: 15px;
   padding: 5px;
   margin-bottom: 20px;
@@ -72,27 +72,9 @@
   padding-right: 15px;
   display: flex;
   flex-direction: column;
-  background-color: white;
+  background-color: var(--container-color);
   border-radius: 15px;
   margin-bottom: 30px;
-}
-
-.plus-minus {
-  background-color: #f2f3f5;
-  padding: 15px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  border-radius: 15px;
-  transition: hover, 0.3s;
-}
-
-.plus-minus:hover {
-  cursor: pointer;
-  background-color: #ccd1db;
-}
-
-.fa-icon {
-  color: black;
 }
 
 .gallery-board {
@@ -110,31 +92,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: white;
+  background-color: var(--container-color);
   padding: 15px;
   border-radius: 15px;
-}
-
-.upload-post-btn {
-  margin-top: 15px;
-  font-family: 'Open Sans';
-  font-size: 15px;
-  font-weight: 600;
-  color: black;
-  text-decoration: none;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 15px;
-  padding-right: 15px;
-  background-color: #f2f3f5;
-  border-radius: 100px;
-  border: none;
-  cursor: pointer;
-  transition: hover, 0.2s;
-}
-
-.upload-post-btn:hover {
-  background: #ccd1db;
 }
 
 input[type="file"]::file-selector-button {
@@ -148,7 +108,7 @@ input[type="file"]::file-selector-button {
   padding-bottom: 10px;
   padding-left: 15px;
   padding-right: 15px;
-  background-color: #f2f3f5;
+  background-color: var(--button-color);
   border-radius: 100px;
   border: none;
   cursor: pointer;
@@ -156,7 +116,7 @@ input[type="file"]::file-selector-button {
 }
 
 input[type="file"]::file-selector-button:hover {
-  background: #ccd1db;
+  background: var(--button-color-hover);
 }
 
 .form-container {
@@ -179,31 +139,14 @@ input[type="file"]::file-selector-button:hover {
 .post-title {
   font-family: 'Open Sans';
   font-size: 25px;
-  color: black;
+  color: var(--text-color);
 }
 
 .post-info {
   font-family: 'Open Sans';
   font-size: 15px;
-  color: gray;
+  color: var(--text-color-2);
   margin-bottom: 15px;
-}
-
-.delete-post-btn {
-  font-family: 'Open Sans';
-  font-size: 15px;
-  font-weight: 600;
-  color: black;
-  margin-top: 15px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 15px;
-  padding-right: 15px;
-  background-color: #f2f3f5;
-  border-radius: 100px;
-  border: none;
-  cursor: pointer;
-  transition: hover, 0.2s;
 }
 
 .gallery-image {
