--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,55 +1,9 @@
-.gallery-login-container {
-  background-color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 15px;
-  border-radius: 15px;
-  margin-top: 50px;
-}
-
-.gallery-login-title {
-  font-family: 'Open Sans';
-  font-size: 25px;
-  font-weight: 600;
-  color: black;
-  margin-bottom: 1px;
-}
-
-.gallery-login-text {
-  font-family: 'Open Sans';
-  font-size: 15px;
-  color: gray;
-}
-
-.gallery-login-btn {
-  margin-top: 15px;
-  font-family: 'Open Sans';
-  font-size: 15px;
-  font-weight: 600;
-  color: black;
-  text-decoration: none;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 15px;
-  padding-right: 15px;
-  background-color: #f2f3f5;
-  border-radius: 100px;
-  border: none;
-  cursor: pointer;
-  transition: hover, 0.2s;
-}
-
-.gallery-login-btn:hover {
-  background-color: #ccd1db;
-}
-
 .gallery-title-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: var(--container-color);
+  box-shadow: var(--box-shadow);
   border-radius: 15px;
   padding: 5px;
   margin-bottom: 20px;
@@ -73,6 +27,7 @@
   display: flex;
   flex-direction: column;
   background-color: var(--container-color);
+  box-shadow: var(--box-shadow);
   border-radius: 15px;
   margin-bottom: 30px;
 }
@@ -93,30 +48,9 @@
   align-items: center;
   justify-content: center;
   background-color: var(--container-color);
+  box-shadow: var(--box-shadow);
   padding: 15px;
   border-radius: 15px;
-}
-
-input[type="file"]::file-selector-button {
-  margin-top: 15px;
-  font-family: 'Open Sans';
-  font-size: 15px;
-  font-weight: 600;
-  color: black;
-  text-decoration: none;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 15px;
-  padding-right: 15px;
-  background-color: var(--button-color);
-  border-radius: 100px;
-  border: none;
-  cursor: pointer;
-  transition: hover, 0.2s;
-}
-
-input[type="file"]::file-selector-button:hover {
-  background: var(--button-color-hover);
 }
 
 .form-container {
@@ -134,6 +68,8 @@ input[type="file"]::file-selector-button:hover {
   margin-bottom: 5px;
   border: none;
   outline: none;
+  background-color: transparent;
+  color: var(--text-color);
 }
 
 .post-title {
