--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -1,11 +1,3 @@
-:root{
-  --wrapper-color: rgba(73, 157, 232, 0.25);
-  --title-color: rgba(255, 255, 255, 1);
-  --text-color: rgba(255, 255, 255, 1);
-  --link-color: rgb(255, 255, 255);
-  --btn-hover-color: rgba(228, 228, 228, 0.59);
-}
-
 .account-wrapper {
   display: flex;
   flex-direction: column;
@@ -13,13 +5,13 @@
   align-items: center;
   margin: 40px;
   width: max-content;
-  background-color: var(--login-wrapper-color);
+  background-color: var(--container-color);
   padding-top: 15px;
   padding-bottom: 15px;
   padding-left: 30px;
   padding-right: 30px;
   border-radius: 5px;
-  box-shadow: rgba(33, 27, 38, 0.59) 0px 10px 30px 0px;
+  box-shadow: var(--box-shadow);
 }
 
 .logout-title {
@@ -38,17 +30,15 @@
   font-size: 14.5px;
   width: 200px;
   height: 45px;
-  background:white;
   border: none;
   outline: none;
   margin-bottom: 20px;
-  border-radius: 40px;
-  background-color: #f2f3f5;  
-  box-shadow: 0 0 10px rgba(0 0 0 .1);
+  border-radius: 40px; 
   cursor: pointer;
+  background-color: var(--button-color);
   transition: hover, 0.2s;
 }
 
 .logout-btn:hover {
-  background: var(--login-btn-hover-color);
+  background: var(--button-color-hover);
 }
