--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -23,6 +23,11 @@
 body {
   display: flex;
   flex-direction: column;
+  background-color: black;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../assets/default-background.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 .wrapper {
