--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -19,10 +19,15 @@
   --nav-btn-hover-color: rgba(228, 228, 228, 0.59);
 }
 
+hr {
+  width: 100%;
+  border: none;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
 /* General */
 body {
-  display: flex;
-  flex-direction: column;
   background-color: black;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../assets/default-background.jpg');
   background-size: cover;
