--- a/src/components/Navigation/Dashboard.css
+++ b/src/components/Navigation/Dashboard.css
@@ -1,7 +1,13 @@
 .dashboard {
-  width: 100%;
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .main-page {
-  margin-top: 65px;
+  flex: 1;
+  position: relative;
+  overflow-y: auto;
+  height: 100vh;
 }
