--- a/src/components/Navigation/NavBar.css
+++ b/src/components/Navigation/NavBar.css
@@ -1,59 +1,42 @@
 .nav-bar {
-  display: flex;
-  width: 100%;
-  /* If you adjust the height, be sure to adjust the margin-bottom */
-  /* of the main-page in ./Navigation/Dashboard.css as well! */
-  height: 40px; 
-  flex-direction: row;
-  justify-content: space-between;
-  background-color: transparent;
-  transition: hover, 0.15s;
-  background-color: rgba(0, 0, 0, 0.50);
   position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: calc(50% - 390px); /** Formula: 50% - (1/2 * (Home.css home-modal-wrapper width + padding))
+                                ONLY adjust this in tandem with the above css class*/
+  background-color: var(--container-color);
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 20px;
+  z-index: 1000;
 }
 
 .nav-button-wrapper {
   display: flex;
-  flex-direction: row;
   align-items: center;
-  text-decoration: none;
-  border-radius: 50px;
-  width: 75px;
-  padding-left: 20px;
-  padding-right: 20px;
+  gap: 10px;
+  padding: 10px 20px;
   cursor: pointer;
-  transition-property: background-color;
-  transition-duration: 0.2s;
-  transition-timing-function: ease-out;
-}
-
-.nav-button-wrapper:active {
-  opacity: 0.75;
+  border-radius: 10px;
+  transition: background-color 0.2s ease;
 }
 
 .nav-button-wrapper:hover {
-  background-color: var(--nav-btn-hover-color)
+  background-color: var(--nav-btn-hover-color);
 }
 
 .nav-button-label {
-  flex: 5;
-  text-align: left;
-  font-family: "Open Sans";
-  font-weight: 350;
-  font-size: 15px;
   color: white;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  padding-top: 8px;
-  padding-bottom: 8px;
+  font-family: "Open Sans";
+  font-size: 15px;
+  margin: 0;
 }
 
 .nav-button-icon {
-  flex: 2;
   color: white;
-  text-align: right;
-  text-align: right;
-  margin: 0px;
+  font-size: 14px;
 }
 
 .span {
