--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -2,6 +2,7 @@
   /* Root */
   --title-color: rgba(255, 255, 255, 1);
   --container-color: rgba(26, 26, 26, 1);
+  --container-color-2: #262626;
   --box-shadow: 0 5px 10px rgba(154,160,185,.05), 0 15px 40px rgba(166,173,201,.2);
   --text-color: white;
   --text-color-2: #999999;
@@ -21,6 +22,8 @@
 
 hr {
   width: 100%;
+  height: 5px;
+  color: white;
   border: none;
   margin-top: 15px;
   margin-bottom: 15px;
@@ -94,17 +97,16 @@ input[type="file"]::file-selector-button:hover {
 /* Home */
 .pencil-icon {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 20px;
+  height: 20px;
   background-color: var(--button-color);
   padding: 15px;
   margin-top: 10px;
   margin-bottom: 10px;
   border-radius: 15px;
-  transition: hover, 0.3s;
-  width: 20px;
-  height: 20px;
+  transition: hover 0.3s;
 }
 
 .pencil-icon:hover {
