--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 :root{
   /* Root */
   --title-color: rgba(255, 255, 255, 1);
@@ -127,4 +131,21 @@ input[type="file"]::file-selector-button:hover {
 .plus-minus:hover {
   cursor: pointer;
   background-color: var(--button-color-hover);
+}
+
+.modal-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 15px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 750px;
+  height: 100vh;
+  line-height: 1.4;
+  background-color: var(--container-color);
+  border-radius: 0;
+  overflow-y: auto;
 }
