--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,39 +1,3 @@
-.home-container {
-  background-color: var(--container-color);
-  padding: 15px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-radius: 15px;
-  width: 392.54px;
-  box-shadow: var(--box-shadow);
-}
-
-.home-upper-container {
-  background-color: var(--container-color);
-  display: flex;
-  padding: 15px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  width: 392.54px;
-}
-
-.home-lower-container {
-  background-color: var(--container-color);
-  display: flex;
-  padding: 15px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-  width: 392.54px;
-}
-
 .home-upload-container {
   padding-top: 0px;
   padding-bottom: 25px;
@@ -174,11 +138,9 @@
   left: 50%;
   transform: translateX(-50%);
   width: 750px;
-  height: 100vh;
+  height: auto;
   background-color: var(--container-color);
   overflow-y: auto;
   padding: 15px;
-  z-index: 1001;
-  border-left: 1px #343434 solid;
-  border-right: 1px #343434 solid;
+  z-index: 1000;
 }
