--- a/src/components/Navigation/Dashboard.css
+++ b/src/components/Navigation/Dashboard.css
@@ -7,7 +7,15 @@
 
 .main-page {
   flex: 1;
-  position: relative;
   overflow-y: auto;
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 15px;
+  width: 750px;
+  max-width: 100%;
+  margin: 0 auto;
+  line-height: 1.4;
+  background-color: var(--container-color);
+  border-radius: 0;
 }
