--- a/src/components/Navigation/Sidebar.css
+++ b/src/components/Navigation/Sidebar.css
@@ -1,14 +1,15 @@
 .side-bar {
   position: fixed;
   top: 0;
-  left: calc(50% + 390px);
+  left: calc(50% + 375px);
   height: 100vh;
-  width: calc(50% - 390px); /** Formula: 50% + (1/2 * (Home.css home-modal-wrapper width + padding))
+  width: calc(50% - 375px); /** Formula: 50% - (1/2 * (Home.css home-modal-wrapper total width))
                                 ONLY adjust this in tandem with the above css class*/
   background-color: var(--container-color);
   display: flex;
   flex-direction: column;
   gap: 15px;
   padding: 20px;
-  z-index: 1000;
+  z-index: 2000;
+  border-left: 1px #343434 solid;
 }
