--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -34,6 +34,11 @@ hr {
 }
 
 /* General */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 body {
   background-color: black;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../assets/default-background.jpg');
@@ -133,19 +138,18 @@ input[type="file"]::file-selector-button:hover {
   background-color: var(--button-color-hover);
 }
 
-.modal-wrapper {
+.main-page-wrapper {
+  position: absolute;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 15px;
-  position: absolute;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
   width: 750px;
-  height: 100vh;
-  line-height: 1.4;
+  height: auto;
   background-color: var(--container-color);
-  border-radius: 0;
   overflow-y: auto;
+  padding: 15px;
+  z-index: 1000;
 }
