UX/UI minor fixes

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -11,6 +11,7 @@
   --text-color: white;
   --text-color-2: #999999;
   --button-color: #262626;
+  --button-color-2: rgba(26, 26, 26, 1);
   --button-color-hover: #3c3c3c;
   --button-text-color: white;
   
