--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -8,6 +8,15 @@
   margin-bottom: 20px;
 }
 
+.edit-blog-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--container-color);
+  border-radius: 15px;
+  padding: 5px;
+}
+
 .blog-container {
   flex-direction: column;
   justify-content: center;
@@ -77,7 +86,7 @@
   width: 500px;
   border: none;
   outline: none;
-  margin-bottom: 25px;
+  margin-bottom: 10px;
   background-color: transparent;
   color: var(--text-color);
 }
