--- a/src/components/Navigation/Sidebar.css
+++ b/src/components/Navigation/Sidebar.css
@@ -13,3 +13,32 @@
   z-index: 2000;
   border-left: 1px #343434 solid;
 }
+
+.search-bar {
+  display: flex;
+  align-items: center;
+  background-color: var(--container-color-2);
+  padding: 8px 12px;
+  border-radius: 6px;
+  border: 1px solid transparent;
+  transition: box-shadow 0.2s ease;
+}
+
+.search-bar:has(input:focus) {
+  box-shadow: 0 0 0 2px #03bbff;
+}
+
+.search-field {
+  margin-left: 10px;
+  border: none;
+  outline: none;
+  color: white;
+  background-color: transparent;
+  font-size: 15px;
+  width: 100%;
+}
+
+.search-results-container {
+  display: flex;
+  flex-direction: column;
+}
