--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -22,6 +22,13 @@
   margin-bottom: 15px;
 }
 
+.home-about {
+  font-family: 'Open Sans';
+  font-size: 18px;
+  color: var(--text-color);
+  margin-bottom: 15px;
+}
+
 .wallpaper-upload-container {
   display: flex;
   flex-direction: column;
