--- a/src/components/UserPage/UserPage.css
+++ b/src/components/UserPage/UserPage.css
@@ -1,15 +1,4 @@
-body.active-modal {
-  overflow-y: hidden;
-}
-
-.btn-modal {
-  padding: 10px 20px;
-  display: block;
-  margin: 100px auto 0;
-  font-size: 18px;
-}
-
-.modal, .overlay {
+.userpage, .overlay {
   width: 100vw;
   height: 100vh;
   top: 0;
@@ -23,7 +12,7 @@ body.active-modal {
   background: rgba(49, 49, 49, 0.4);
 }
 
-.modal-wrapper {
+.userpage-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -48,7 +37,7 @@ body.active-modal {
   position: relative;
 }
 
-.modal-wallpaper {
+.userpage-wallpaper {
   width: 100%;
   height: 375px;
   background-size: cover;
@@ -71,45 +60,21 @@ body.active-modal {
   z-index: 2;
 }
 
-.close-modal {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: var(--button-color);
-  padding: 15px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  border-radius: 15px;
-  border: none;
-  transition: hover, 0.3s;
-  width: 50px;
-  height: 50px;
-}
-
-.close-modal:hover {
-  cursor: pointer;
-  background-color: var(--button-color-hover);
-}
-
-.modal-username {
+.userpage-username {
   font-family: 'Open Sans';
   margin-top: 60px;
   font-size: 30px;
   color: var(--text-color);
 }
 
-.modal-name {
+.userpage-name {
   font-family: 'Open Sans';
   font-size: 18px;
   color: var(--text-color-2);
   margin-bottom: 15px;
 }
 
-.modal-about {
+.userpage-about {
   font-family: 'Open Sans';
   font-size: 18px;
   color: var(--text-color);
