Refactored user page. Uploading and deleting blogs temporarily does not work.

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -156,3 +156,12 @@ input[type="file"]::file-selector-button:hover {
   padding: 15px;
   z-index: 1000;
 }
+
+.page-title {
+  font-family: 'Open Sans';
+  font-size: 25px;
+  color: var(--text-color);
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
