In Dashboard, I added a button for users to create media. Moving all blog, post, and link creation to the 'Create' component to centralize everything.

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -62,6 +62,10 @@ body {
   color: var(--button-text-color);
 }
 
+.fa-black {
+  color: black;
+}
+
 input[type="file"]::file-selector-button {
   margin-top: 15px;
   font-family: 'Open Sans';
