--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,22 +1,3 @@
-.blog-title-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: var(--container-color);
-  border-radius: 15px;
-  padding: 5px;
-  margin-bottom: 20px;
-}
-
-.edit-blog-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: var(--container-color);
-  border-radius: 15px;
-  padding: 5px;
-}
-
 .blog-container {
   flex-direction: column;
   justify-content: center;
@@ -89,4 +70,12 @@
   margin-bottom: 10px;
   background-color: transparent;
   color: var(--text-color);
+}
+
+.blog-post-btn-group {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
