--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -152,3 +152,23 @@ input[type="file"]::file-selector-button:hover {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+.more-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 25px;
+  background-color: var(--button-color);
+  border-radius: 15px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+  margin-bottom: 15px;
+  width: 5px;
+  height: 5px;
+  transition: hover 0.2s ease;
+}
+
+.more-button:hover {
+  background-color: var(--button-color-hover);
+}
