--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -29,11 +29,11 @@
 
 hr {
   width: 100%;
-  height: 5px;
+  height: 0.3125rem;
   color: white;
   border: none;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 0.9375rem;
+  margin-bottom: 0.9375rem;
 }
 
 /* General */
@@ -42,6 +42,11 @@ html, body {
   margin: 0;
   padding: 0;
 }
+
+html {
+  font-size: 16px;
+}
+
 body {
   background-color: black;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../assets/default-background.jpg');
@@ -55,7 +60,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 25px;
+  margin-bottom: 1.5625rem;
 }
 
 .fa-icon {
@@ -67,16 +72,16 @@ body {
 }
 
 input[type="file"]::file-selector-button {
-  margin-top: 15px;
+  margin-top: 0.9375rem;
   font-family: 'Open Sans';
-  font-size: 15px;
+  font-size: 0.9375rem;
   font-weight: 600;
   color: var(--button-text-color);
   text-decoration: none;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+  padding-left: 0.9375rem;
+  padding-right: 0.9375rem;
   background-color: var(--button-color);
   border-radius: 100px;
   border: none;
@@ -90,15 +95,15 @@ input[type="file"]::file-selector-button:hover {
 
 .gray-btn {
   font-family: 'Open Sans';
-  margin-top: 15px;
-  font-size: 15px;
+  margin-top: 0.9375rem;
+  font-size: 0.9375rem;
   font-weight: 600;
   color: var(--button-text-color);
   text-decoration: none;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+  padding-left: 0.9375rem;
+  padding-right: 0.9375rem;
   background-color: var(--button-color);
   border-radius: 100px;
   border: none;
@@ -112,15 +117,15 @@ input[type="file"]::file-selector-button:hover {
 
 .blue-btn {
   font-family: 'Open Sans';
-  margin-top: 15px;
-  font-size: 15px;
+  margin-top: 0.9375rem;
+  font-size: 0.9375rem;
   font-weight: 600;
   color: var(--button-text-color);
   text-decoration: none;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-top: 0.625rem;
+  padding-bottom: 0.625rem;
+  padding-left: 0.9375rem;
+  padding-right: 0.9375rem;
   background-color: var(--blue-color);
   border-radius: 100px;
   border: none;
@@ -136,36 +141,36 @@ input[type="file"]::file-selector-button:hover {
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: 750px;
+  width: 46.875rem;
   height: auto;
   background-color: var(--container-color);
   overflow-y: auto;
-  padding: 15px;
+  padding: 0.9375rem;
   z-index: 1000;
 }
 
 .page-title {
   font-family: 'Open Sans';
-  font-size: 25px;
+  font-size: 1.5625rem;
   color: var(--text-color);
   text-align: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 0.625rem;
+  margin-bottom: 0.625rem;
 }
 
 .more-button {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 25px;
+  padding: 1.5625rem;
   background-color: var(--button-color);
-  border-radius: 15px;
+  border-radius: 0.9375rem;
   border: none;
   cursor: pointer;
   transition: background-color 0.2s ease;
-  margin-bottom: 15px;
-  width: 5px;
-  height: 5px;
+  margin-bottom: 0.9375rem;
+  width: 0.3125rem;
+  height: 0.3125rem;
   transition: hover 0.2s ease;
 }
 
@@ -190,6 +195,6 @@ input[type="file"]::file-selector-button:hover {
   background-color: var(--container-color);
   box-shadow: var(--box-shadow);
   z-index: 10;
-  border-radius: 6px;
-  width: 250px;
+  border-radius: 0.375rem;
+  width: 15.625rem;
 }
