--- a/src/components/Account/Account.css
+++ b/src/components/Account/Account.css
@@ -3,14 +3,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 40px;
+  margin: 2.5rem;
   width: max-content;
   background-color: var(--container-color-2);
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 30px;
-  padding-right: 30px;
-  border-radius: 15px;
+  padding-top: 0.9375rem;
+  padding-bottom: 0.9375rem;
+  padding-left: 1.875rem;
+  padding-right: 1.875rem;
+  border-radius: 0.9375rem;
 }
 
 .logout-title {
@@ -18,22 +18,22 @@
   font-weight: 600;
   text-align: center;
   font-stretch: condensed;
-  font-size: 40px;
-  margin-top: 15px;
-  margin-bottom: 30px;
+  font-size: 2.5rem;
+  margin-top: 0.9375rem;
+  margin-bottom: 1.875rem;
   color: var(--text-color);
 }
 
 .logout-btn {
   color: white;
   font-family: 'Open Sans';
-  font-size: 14.5px;
-  width: 200px;
-  height: 45px;
+  font-size: 0.90625rem;
+  width: 12.5rem;
+  height: 2.8125rem;
   border: none;
   outline: none;
-  margin-bottom: 20px;
-  border-radius: 40px; 
+  margin-bottom: 1.25rem;
+  border-radius: 2.5rem;
   cursor: pointer;
   background-color: var(--button-color);
   transition: hover, 0.2s;
