--- a/src/components/Authentication/Login.css
+++ b/src/components/Authentication/Login.css
@@ -10,14 +10,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 40px;
+  margin: 2.5rem;
   width: max-content;
   background-color: var(--container-color);
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 30px;
-  padding-right: 30px;
-  border-radius: 5px;
+  padding-top: 0.9375rem;
+  padding-bottom: 0.9375rem;
+  padding-left: 1.875rem;
+  padding-right: 1.875rem;
+  border-radius: 0.3125rem;
   box-shadow: var(--box-shadow);
 }
 
@@ -26,9 +26,9 @@
   font-weight: 600;
   text-align: center;
   font-stretch: condensed;
-  font-size: 40px;
-  margin-top: 15px;
-  margin-bottom: 30px;
+  font-size: 2.5rem;
+  margin-top: 0.9375rem;
+  margin-bottom: 1.875rem;
   color: var(--text-color);
 }
 
@@ -41,13 +41,13 @@
 
 .login-btn {
   font-family: 'Open Sans';
-  font-size: 14.5px;
+  font-size: 0.90625rem;
   width: 100%;
-  height: 45px;
+  height: 2.8125rem;
   border: none;
   outline: none;
-  margin-bottom: 20px;
-  border-radius: 40px;
+  margin-bottom: 1.25rem;
+  border-radius: 2.5rem;
   cursor: pointer;
   transition: hover, 0.2s;
 }
@@ -56,22 +56,22 @@
   background: var(--login-btn-hover-color);
 }
 
-.input-box{
+.input-box {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   border-style: solid;
-  border-radius: 5px;
+  border-radius: 0.3125rem;
   border-color: var(--text-color);
-  margin-bottom: 20px;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  padding-left: 10px;
-  padding-right: 15px;
-  width: 300px;
+  margin-bottom: 1.25rem;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  padding-left: 0.625rem;
+  padding-right: 0.9375rem;
+  width: 18.75rem;
 }
 
-.input-box input{
+.input-box input {
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -91,25 +91,25 @@
 
 .input-box i {
   position: absolute;
-  right: 20px;
+  right: 1.25rem;
   top: 50%;
   transform: translateY(-50%);
-  font-size: 20px;
+  font-size: 1.25rem;
 }
 
 .icon-label {
-  color: var(--text-color)
+  color: var(--text-color);
 }
 
 .register-label {
   font-family: 'Open Sans';
-  font-size: 15px;
+  font-size: 0.9375rem;
   color: var(--text-color);
 }
 
 .register-link {
   font-family: 'Open Sans';
-  font-size: 15px;
+  font-size: 0.9375rem;
   font-weight: 600;
   font-stretch: condensed;
   text-decoration: underline;
@@ -127,16 +127,16 @@
   flex-direction: row;
   justify-content: center;
   width: 100%;
-  margin-bottom: 20px;
-  font-size: 14.5px;
+  margin-bottom: 1.25rem;
+  font-size: 0.90625rem;
   font-family: Work Sans;
   color: var(--text-color);
 }
 
 .error-container {
-  width: 328px;
+  width: 20.5rem;
   font-family: 'Open Sans';
   color: var(--text-color);
   text-align: center;
-  padding-bottom: 15px;
+  padding-bottom: 0.9375rem;
 }
