--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,22 +1,22 @@
 .gallery-board {
-  border-radius: 15px;
+  border-radius: 0.9375rem;
   display: grid;
   flex-wrap: wrap;
   flex-direction: column;
   justify-content: flex-start;
-  row-gap: 20px;
-  column-gap: 20px;
+  row-gap: 1.25rem;
+  column-gap: 1.25rem;
 }
 
 .post-container {
   display: flex;
-  width: 600px;
+  width: 37.5rem;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: var(--container-color-2);
-  padding: 15px;
-  border-radius: 15px;
+  padding: 0.9375rem;
+  border-radius: 0.9375rem;
 }
 
 .post-header {
@@ -25,8 +25,8 @@
   align-items: center;
   justify-content: left;
   width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 0.9375rem;
+  padding-right: 0.9375rem;
 }
 
 .post-information {
@@ -38,15 +38,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  padding-left: 15px;
-  padding-right: 15px;
-  display: flex;
-  flex-direction: column;
+  padding-top: 1.5625rem;
+  padding-bottom: 1.5625rem;
+  padding-left: 0.9375rem;
+  padding-right: 0.9375rem;
   background-color: var(--container-color);
-  border-radius: 15px;
-  margin-bottom: 30px;
+  border-radius: 0.9375rem;
+  margin-bottom: 1.875rem;
 }
 
 .gallery-form-container {
@@ -58,10 +56,10 @@
 
 .post-title-input-box {
   font-family: 'Open Sans';
-  font-size: 30px;
+  font-size: 1.875rem;
   text-align: center;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: 0.3125rem;
+  margin-bottom: 0.3125rem;
   border: none;
   outline: none;
   background-color: transparent;
@@ -69,32 +67,32 @@
 }
 
 .gallery-avatar {
-  width: 40px;
-  height: 40px;
+  width: 2.5rem;
+  height: 2.5rem;
   object-fit: cover;
-  border-radius: 10px;
-  margin-right: 10px;
-  transform: translateY(-6px);
+  border-radius: 0.625rem;
+  margin-right: 0.625rem;
+  transform: translateY(-0.375rem);
 }
 
 .post-title {
   font-family: 'Open Sans';
-  font-size: 25px;
+  font-size: 1.5625rem;
   color: var(--text-color);
 }
 
 .post-date {
   font-family: 'Open Sans';
-  font-size: 15px;
+  font-size: 0.9375rem;
   color: var(--text-color-2);
-  margin-bottom: 15px;
+  margin-bottom: 0.9375rem;
 }
 
 .gallery-image {
-  width: 550px;
+  width: 34.375rem;
   height: auto;
   object-fit: cover;
-  border-radius: 20px;
+  border-radius: 1.25rem;
 }
 
 .post-btn-group {
