--- a/src/components/Home/Create.css
+++ b/src/components/Home/Create.css
@@ -12,7 +12,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.80);
-  gap: 20px;
+  gap: 1.25rem;
 }
 
 .create-btn-row {
@@ -34,31 +34,32 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 30px;
+  padding: 1.875rem;
   background-color: white;
-  border-radius: 15px;
+  border-radius: 0.9375rem;
   border: none;
   cursor: pointer;
   transition: background-color 0.2s ease;
-  margin-bottom: 15px;
-  width: 100px;
-  height: 100px;
+  margin-bottom: 0.9375rem;
+  width: 6.25rem;
+  height: 6.25rem;
 }
 
 .create-label {
-  font-size: 20px;
+  font-size: 1.25rem;
   color: var(--text-color);
 }
 
 .create-cancel-btn {
   color: var(--button-text-color);
-  padding: 15px;
+  padding: 0.9375rem;
   background-color: white;
-  border-radius: 15px;
+  border-radius: 0.9375rem;
   border: none;
   cursor: pointer;
   transition: background-color 0.2s ease;
 }
+
 .create-cancel-btn:hover {
   background-color: var(--login-btn-hover-color);
 }
