--- a/src/components/Navigation/Dashboard.css
+++ b/src/components/Navigation/Dashboard.css
@@ -11,8 +11,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 15px;
-  width: 750px;
+  padding: 0.9375rem;
+  width: 46.875rem;
   max-width: 100%;
   margin: 0 auto;
   line-height: 1.4;
