--- a/src/components/UserPage/UserPage.css
+++ b/src/components/UserPage/UserPage.css
@@ -16,12 +16,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 15px;
+  padding: 0.9375rem;
   position: absolute;
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  width: 750px;
+  width: 46.875rem;
   height: 100vh;
   line-height: 1.4;
   background-color: var(--container-color);
@@ -39,45 +39,45 @@
 
 .userpage-wallpaper {
   width: 100%;
-  height: 375px;
+  height: 23.4375rem;
   background-size: cover;
   background-position: center;
-  border-top-left-radius: 16px;
-  border-top-right-radius: 16px;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
   position: relative;
 }
 
 .avatar-wallpaper-wrapper img,
 .avatar-wallpaper-wrapper .avatar-img {
   position: absolute;
-  bottom: -50px;
-  width: 150px;
-  height: 150px;
+  bottom: -3.125rem;
+  width: 9.375rem;
+  height: 9.375rem;
   object-fit: cover;
-  border-radius: 15px;
-  border: 4px solid var(--container-color);
+  border-radius: 0.9375rem;
+  border: 0.25rem solid var(--container-color);
   background-color: var(--container-color);
   z-index: 2;
 }
 
 .userpage-username {
   font-family: 'Open Sans';
-  font-size: 18px;
+  font-size: 1.125rem;
   color: var(--text-color-2);
-  margin-bottom: 15px;
+  margin-bottom: 0.9375rem;
 }
 
 .userpage-name {
   font-family: 'Open Sans';
-  margin-top: 60px;
-  font-size: 30px;
+  margin-top: 3.75rem;
+  font-size: 1.875rem;
   color: var(--text-color);
 }
 
 .userpage-about {
   font-family: 'Open Sans';
-  font-size: 18px;
+  font-size: 1.125rem;
   color: var(--text-color);
-  margin-bottom: 15px;
+  margin-bottom: 0.9375rem;
   text-align: center;
 }
