--- a/src/components/UserPage/UserPageNavbar.css
+++ b/src/components/UserPage/UserPageNavbar.css
@@ -1,7 +1,7 @@
 .userpage-nav-bar {
   display: flex;
   width: 100%;
-  height: 40px; 
+  height: 2.5rem;
   flex-direction: row;
   justify-content: space-between;
   background-color: transparent;
@@ -13,10 +13,10 @@
   flex-direction: row;
   align-items: center;
   text-decoration: none;
-  border-radius: 50px;
-  width: 75px;
-  padding-left: 20px;
-  padding-right: 20px;
+  border-radius: 3.125rem;
+  width: 4.6875rem;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
   cursor: pointer;
   transition-property: background-color;
   transition-duration: 0.2s;
@@ -28,7 +28,7 @@
 }
 
 .userpage-nav-button-wrapper:hover {
-  background-color: var(--nav-btn-hover-color)
+  background-color: var(--nav-btn-hover-color);
 }
 
 .userpage-nav-button-label {
@@ -36,18 +36,17 @@
   text-align: left;
   font-family: "Open Sans";
   font-weight: 350;
-  font-size: 15px;
+  font-size: 0.9375rem;
   color: white;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  padding-top: 8px;
-  padding-bottom: 8px;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .userpage-nav-button-icon {
   flex: 2;
   color: white;
   text-align: right;
-  text-align: right;
-  margin: 0px;
+  margin: 0;
 }
